# triangle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
glad/include/glad/: gl.h
lib/glad/: .gitignore  CMakeLists.txt
scripts/: glew.sh
src/: main.cpp
